--- a/iot/pubspec.yaml
+++ b/iot/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_launcher: ^5.5.2
+#  flutter_local_notifications: ^1.4.4+1
+  flutter_local_notifications: ^1.5.0+1
   bottom_navy_bar: ^6.0.0
   percent_indicator: ^2.1.5
 #  syncfusion_flutter_gauges: ^19.1.65
