--- a/iot/pubspec.yaml
+++ b/iot/pubspec.yaml
@@ -17,9 +17,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  url_launcher: ^5.5.2
-#  flutter_local_notifications: ^1.4.4+1
-  flutter_local_notifications: ^1.5.0+1
+#  url_launcher: ^5.5.2
+  url_launcher: ^6.0.6
+#  flutter_local_notifications: ^1.5.0+1
   bottom_navy_bar: ^6.0.0
   percent_indicator: ^2.1.5
 #  syncfusion_flutter_gauges: ^19.1.65
@@ -31,6 +31,11 @@ dependencies:
   syncfusion_flutter_charts: ^18.4.49
   dio: ^3.0.10
   date_format: ^2.0.2
+
+  firebase_messaging: ^10.0.1
+#  firebase_core: ^1.2.1
+  firebase_core: ^1.3.0
+  flutter_local_notifications: ^6.0.0
 
 dev_dependencies:
   flutter_test:
