--- a/iot/pubspec.yaml
+++ b/iot/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
 #  firebase_core: ^1.2.1
   firebase_core: ^1.3.0
   flutter_local_notifications: ^6.0.0
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,10 @@ flutter:
      - assets/images/canhbao_ph.png
      - assets/images/logo.png
      - assets/images/auth_back.jpg
+     - assets/images/login_bottom.png
+     - assets/images/main_bottom.png
+     - assets/images/main_top.png
+     - assets/images/signup_top.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
