--- a/iot/android/app/src/main/AndroidManifest.xml
+++ b/iot/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.iot">
-<!--    <uses-permission android:name="android.permission.INTERNET"/>-->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -36,7 +35,8 @@
               />
             <meta-data
                 android:name="com.google.firebase.messaging.default_notification_channel_id"
-                android:value="easyapproach" />
+                android:value="easyapproach"
+                />
 
 
             <intent-filter>
@@ -51,18 +51,18 @@
 
         </activity>
 
-       <service android:name=".MyFirebaseMessagingService" android:exported="false">
-           <intent-filter>
-               <action android:name="com.google.firebase.MESSAGING_EVENT" />
-           </intent-filter>
-       </service>
+<!--       <service android:name=".MyFirebaseMessagingService" android:exported="false">-->
+<!--           <intent-filter>-->
+<!--               <action android:name="com.google.firebase.MESSAGING_EVENT" />-->
+<!--           </intent-filter>-->
+<!--       </service>-->
 
-       <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
-       <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
-           <intent-filter>
-               <action android:name="android.intent.action.BOOT_COMPLETED"></action>
-           </intent-filter>
-       </receiver>
+<!--       <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />-->
+<!--       <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">-->
+<!--           <intent-filter>-->
+<!--               <action android:name="android.intent.action.BOOT_COMPLETED"></action>-->
+<!--           </intent-filter>-->
+<!--       </receiver>-->
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
