--- a/iot/pubspec.yaml
+++ b/iot/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
      - assets/images/canhbao_temp.png
      - assets/images/canhbao_ph.png
      - assets/images/logo.png
+     - assets/images/anh.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
